--- a/src/Component/InputBox/InputBox.scss
+++ b/src/Component/InputBox/InputBox.scss
@@ -7,14 +7,17 @@
 $main-color: #ACFFEF;
 
 .mainBox {
-    /* div position */
+    /* div reponsible web */
     position: absolute;
-    left: 30%;
-    top: 30%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+    padding: 10px;
 
     /* div layer */
     max-width: 1800px;
-    width: 600px;
+    width: 35vw;
     height: 250px;
 
     background-color: rgba(200, 200, 200, .1);
@@ -52,7 +55,7 @@ $main-color: #ACFFEF;
         color: $main-color;
     }
     p {
-        font-size: 18px;
+        font-size: 1rem;
         color: $main-color
     }
     a {
@@ -72,3 +75,9 @@ $main-color: #ACFFEF;
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
     opacity: .5;
 }*/
+
+// @media (min-width: 481px) and (max-width: 768px) {
+// }
+
+// @media (min-width: 768px) {
+// }
