--- a/src/Component/Example/Compose/InputBox.scss
+++ b/src/Component/Example/Compose/InputBox.scss
@@ -32,6 +32,7 @@ $main-color: #ACFFEF;
     input {
         /* input layer */
         margin: auto;
+        width: 80%;
         height: 30px;
         background:transparent;
 
