--- a/src/Component/Example/Compose/InputBox.scss
+++ b/src/Component/Example/Compose/InputBox.scss
@@ -87,6 +87,22 @@ $main-color: #ACFFEF;
     }
 }
 
+.notMain {
+    top: 10%;
+    left: 20%;
+    width: 35vw;
+    height: 100px;
+    padding: 5px;
+
+    h2 {
+        font-size: 2rem;
+        margin: 0;
+    }
+    p {
+        display: none;
+    }
+}
+
 /* .mainBox::before {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
