[ADD] sideBar: scss

--- a/react/src/Component/Example/Compose/SideBar/SideBar.scss
+++ b/react/src/Component/Example/Compose/SideBar/SideBar.scss
@@ -62,7 +62,7 @@
   .sidebar {
     width: 300px;
     height: 100%;
-    // background-color: #222;
+    background-color: rgba(200, 200, 200, .1);
     position: fixed;
     top: 0;
     right: -300px;
