--- a/react/src/Component/Example/Compose/userinput/UserInput.scss
+++ b/react/src/Component/Example/Compose/userinput/UserInput.scss
@@ -7,12 +7,19 @@
     margin-top: 20px;
     color: #acffef;
   }
+
+  p {
+    margin-left: 70px;
+    color: #acffef;
+    font-size: 1.2em;
+  }
+
   .userInputSubmit {
     font-family: 'Stylish', sans-serif;
 
     background: transparent;
     margin-left: 120px;
-    margin-top: 20px;
+    margin-top: 10px;
     padding: 10px 10px;
     color: #acffef;
   }
