--- a/react/src/Component/Example/Compose/SideBar/SideBar.scss
+++ b/react/src/Component/Example/Compose/SideBar/SideBar.scss
@@ -10,7 +10,7 @@
     height: 30px;
     position: fixed;
     right: 0;
-    top: 0;
+    top: 10%;
     cursor: pointer;
   }
   
@@ -61,10 +61,10 @@
   
   .sidebar {
     width: 300px;
-    height: 100%;
+    height: 79%;
     background-color: rgba(200, 200, 200, .1);
     position: fixed;
-    top: 0;
+    top: 10%;
     right: -300px;
     z-index: 1;
     transition: all 0.35s;
